--- a/templates/views/Test.hbs
+++ b/templates/views/Test.hbs
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-
+<html>
+    
 <head>
 
+
+    <title>Weather</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="/css/styles.css">
+
+</head>
+
 <body class="Dasechte">
-    <div>
-        <a href="https://github.com/21jon/web-server-nodec"></a>
+    {{>header}}
+    <div class="main-content">
+        <a href="https://github.com/21jon/web-server-nodec"> Zum Git res</a>
 
 
     </div>    
-
+    {{>footer}}
 
 </body>
 
 
 
 
-</head>
+
+</html>
