--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -4,4 +4,5 @@
     <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
+    <a href="/source">Source</a>
 </header>
