--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
         {{>header}}
         <p>This site was created by Jonas. It uses data from mapbox.com and weather something </p>
 
-        <img class="portrait" src="/img/me.png">
+        <img class="portrait" src="/img/me.jpg">
     </div>
     
     {{>footer}}
